# TP-1-DLBasics

./: README.md  numpy_refresh.ipynb  pyproject.toml  rapport.ipynb
.github/classroom/: autograding.json
tests/: test_all.py
