[tool.poetry]
name = "numpy-refresh"
version = "0.1.0"
description = ""
authors = ["Thomas Aubry <github.thomaub@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.9"
numpy = "1.18.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
ipykernel = "^5.3.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
